--- a/index.html
+++ b/index.html
@@ -320,16 +320,21 @@ furthering of human values ([[?ETHICAL-WEB]], [[?design-principles]]). One of th
 Web serves people is by protecting them in the face of asymmetries of power and this includes
 establishing and enforcing rules to govern the power of data.
 
-Privacy is the system of [=rules=] that govern information flows. More precisely, it is about how
+<dfn>Data governance</dfn> is the system of [=rules=] that regulate [=information flows=]. When
+[=people=] are involved in these [=information flows=], [=data governance=] determines how
 these rules constrain and distribute the power of information between different [=actors=].
-<dfn data-lt="rules">Privacy rules</dfn> describe the way in which different [=actors=] may, must,
+The <dfn>rules</dfn> describe the way in which different [=actors=] may, must,
 or must not produce or [=process=] flows of information from, to, or about other [=actors=]
-([[?GKC-Privacy]], [[?IAD]]).
+([[?GKC-Privacy]], [[?IAD]]). <dfn>Privacy</dfn> is achieved when the governance situation has
+human impact, either by involving [=personal data=] or by exerting action over [=people=], and the
+[=rules=] are followed appropriately. When the governance situation has human impact but the
+[=rules=] are not followed, there is a <dfn>privacy violation</dfn>.
 
 Typically, <dfn>actors</dfn> are [=people=] but they can also be collective endeavours such as
-companies, associations, or political parties (eg. in the case of espionage). It is important to
-keep in mind that not all people are equal in how they may resist the imposition of unfair rules,
-some [=people=] are more [=vulnerable=] and therefore in greater need of protection.
+companies, associations, or political parties (eg. in the case of espionage), which are known as
+[=parties=]. It is important to keep in mind that not all people are equal in how they may resist
+the imposition of unfair rules, some [=people=] are more [=vulnerable=] and therefore in greater
+need of protection.
 
 The [=rules=] that apply vary from [=context=] to [=context=] ([[?Understanding-Privacy]]): people
 have different expectations of [=privacy=] at work, at a café, or at home. Understanding and
