--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script src="https://www.w3.org/Tools/respec/respec-w3c" defer class="remove"></script>
-  <title>Privacy Principles</title>
+  <title>Privacy Rules</title>
   <script class="remove">
     // All config options at https://respec.org/docs/
     var respecConfig = {
@@ -298,7 +298,7 @@ understanding is that the law is a floor, not a ceiling.
 
 </section>
 
-# Privacy on the Web {#intro}
+# Understanding Privacy Rules {#intro}
 
 Information is power. It can be used to predict and to influence people, as well as to design online
 spaces that control people's behaviour. The collection and [=processing=] of information in greater
@@ -361,8 +361,6 @@ was extracted by observing people's behaviour on someone else's website.
 tk tk tk ==========
 
 have some subsections
-
-data governance.
 
 
 The focus of this document concerns leveraging this power differential against people, but the same
