--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@
           href: 'https://www.hup.harvard.edu/catalog.php?isbn=9780674035072',
           publisher: 'Harvard University Press',
         },
+        'Why-Privacy': {
+          title: 'Why Privacy Matter',
+          authors: ['Neil Richards'],
+          href: 'https://global.oup.com/academic/product/why-privacy-matters-9780190939045?cc=us&lang=en&',
+          publisher: 'Oxford University Press',
+        },
       },
     };
   </script>
@@ -334,7 +340,9 @@ Typically, <dfn>actors</dfn> are [=people=] but they can also be collective ende
 companies, associations, or political parties (eg. in the case of espionage), which are known as
 [=parties=]. It is important to keep in mind that not all people are equal in how they may resist
 the imposition of unfair rules, some [=people=] are more [=vulnerable=] and therefore in greater
-need of protection.
+need of protection. The focus of this document concerns leveraging this power differential against
+people, but the same techniques are also used to leverage the power of information against other
+entities, such as companies or governments.
 
 The [=rules=] that apply vary from [=context=] to [=context=] ([[?Understanding-Privacy]]): people
 have different expectations of [=privacy=] at work, at a café, or at home. Understanding and
@@ -345,6 +353,10 @@ evaluating a privacy situation is best done by clearly identifying:
 * The specific type of data in the [=information flow=].
 * The [=rules=] that are in use in this specific context.
 
+It is important to keep in mind that there are <em>always</em> privacy [=rules=]. There is no
+purportedly neutral situation in which no rules apply. We must therefore determine which [=rules=]
+best serve human values ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
+
 Information flows need to be understood in a bidirectional manner: the flow of information
 <em>about</em> a person (the subject) just as well as the flow of information <em>towards</em> a
 person (the recipient). Recipients can have their privacy violated in multiple ways such as
@@ -352,46 +364,34 @@ unexpected shocking images, loud noises while one intends to sleep, manipulative
 interruptive messages when a person's focus is on something else, or harassment when they seek
 social interactions.
 
-<dfn data-lt='information'>Information flows</dfn> are relevant to privacy whenever people are involved. The information
-itself need not necessarily be [=personal data=]. Disruptive or interruptive information flowing to
-a person is in scope, as is [=de-identified=] [=data=] that can be used to manipulate people or that
-was extracted by observing people's behaviour on someone else's website.
-
-
-tk tk tk ==========
-
-have some subsections
-
-
-The focus of this document concerns leveraging this power differential against people, but the same
-techniques are also used to leverage the power of information against other entities, such as
-companies or governments.
-
-There are always privacy rules — the question is which ones best serve human values. So privacy is
-_instrumental_ to using data in service of a space designed _for_ everyone.
-
-A data system designed for people is one in which people remain effectively able to reason about
-what is known about them. This means working to prevent hidden parties from acquiring such
-information, preventing any party from acquiring too much information about a person particularly in
-cross-referencing from multiple sources, restricting applications of this data that are hostile to
-people. [this needs all kinds of better phrasing]
+<dfn data-lt='information'>Information flows</dfn> are relevant to privacy whenever people are
+involved. The information itself need not necessarily be [=personal data=]. Disruptive or
+interruptive information flowing to a person is in scope, as is [=de-identified=] [=data=] that can
+be used to manipulate people or that was extracted by observing people's behaviour on someone else's
+website.
 
 
 
-Tk
-- rules & contexts
-- actors and agents
 
 <!--
-Privacy isn’t an intrinsic good, it is a means to an end. It helps support identity, freedom, protection. It gives us the obscurity and intimacy we need to develop our identity without being observed, and to have different identities in different contexts, which is key to a thriving human life. It protects us from excessive power ([Privacy as Power](https://www.notion.so/Privacy-as-Power-49d78c2595fe465ca941bb9926122347), [Privacy as Relational](https://www.notion.so/Privacy-as-Relational-b48134bdbe4941e6bbb760c6045b3c22)) in the hands of government or corporations (or any other actor) that can use surveillance or capture ([Surveillance vs Capture](https://www.notion.so/Surveillance-vs-Capture-1c1c7820cecf4a05b4d4b5720b869b0f)) for power, blackmail, optimisation — in general to give themselves the upper hand as a structure again people’s agency ([Structure vs Agency](https://www.notion.so/Structure-vs-Agency-c83db40386dd48efb6c57ec4a46ef372)). It brings protection because information is power, and privacy protects us from sorting and persuasion, defending against information and automation asymmetries. Battles over privacy will determine the future allocation of power in society.
+=== MATERIAL ===
 
 See Privacy as Rules
 
 Don't talk about collective privacy, weave that throughout. Call out cases that would call for
 collective takes, eg. fraud, all policing.
 
+COLLECTIVE
+Privacy [=rules=] are socially negotiated and often contested ([[?Privact-Contested]]). This makes
+privacy a problem of collective action ([[?GKC-Privacy]]).
 
-<dfn>privacy violation</dfn>
+ABOUT REASONING
+A data system designed for people is one in which people remain effectively able to reason about
+what is known about them. This means working to prevent hidden parties from acquiring such
+information, preventing any party from acquiring too much information about a person particularly in
+cross-referencing from multiple sources, restricting applications of this data that are hostile to
+people. [this needs all kinds of better phrasing]
+
 -->
 
 
